# audio_reactive_led_strip

./: .gitignore  LICENSE  Makefile  README.md  cli.py  pyproject.toml  requeriments.txt  requirements.txt  scanner.py  setup.py  test.ipynb
.qt_for_python/uic/: window.py
audio_reactive_led_strip/: __init__.py  __main__.py  app.py  audio.py  config.py  controller.py  fps.py  melbank.py  recorder.py  view.py  wifi.py
audio_reactive_led_strip/common/: controller.py  view.py
audio_reactive_led_strip/gui/: stylesheet.qss  widgets.py  window.py  window.ui
audio_reactive_led_strip/resources/: resources.qrc  resources_rc.py
audio_reactive_led_strip/ui/: compiler.sh  customWidgets.py  rccCompiler.sh  resources.py  resources.qrc  resources_rc.py  stylesheet.qss  uiCompiler.sh  window.py  window.ui
audio_reactive_led_strip/utils/: audio.py  color.py  fps.py  melbank.py  recorder.py  wifi.py
